Fix slides overflow bug

--- a/public/slideCreator/slideCreator.css
+++ b/public/slideCreator/slideCreator.css
@@ -46,12 +46,14 @@ main {
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    overflow-y: auto;
 }
 
 #slides {
     width: 300px;
     height: 100%;
     background-color: #1F271B;
+    overflow-y: auto;
 }
 
 #slides-container {
